# Knotty

./: .gitignore  CMakeLists.txt  README.md  V_final.h  W_final.cpp  h_common.cpp  h_globals.h  h_struct.h  index4D.h  knotty  knotty.cpp  pseudo_loop.cpp  pseudo_loop.h  trace_arrow.h
Knotty/: CMakeLists.txt  W_final.cpp  W_final.h  cmd_line_options.h  h_common.cpp  h_common.h  h_globals.h  index4D.h  pseudo_loop.cpp
Old_CCJ/: CCJ.h  Makefile  VM_final.h  W_final.cpp  h_externs.h  h_globals.h  h_struct.h
Old_CCJ/simfold/: Makefile_simfold  simfold
Old_CCJ/simfold/include/: simfold.h  structs.h
Old_CCJ/simfold/params/: CG_best_parameters_ISMB2007.txt  mathews-sint2-dna.dh  mathews-stack-dna.dh  mathews-triloop-dna.dh  multirnafold.conf  parameters_DP09_chopped.txt  turner-dangle-rna.dg  turner-miscloop-rna.dat~  turner-sint4-rna.dg  turner-tloop-rna.dh  turner-tstackh-rna.dg  turner_partypes_fm363.txt
Old_CCJ/simfold/src/common/: init.cpp  timer.cpp  timer.h
Old_CCJ/simfold/src/simfold/: s_energy_matrix.cpp  s_hairpin_loop.cpp  s_internal_loop.h  s_partition_function.cpp  s_partition_function_UNRESTRICTED.cpp  s_partition_function_UNRESTRICTED.h  s_specific_functions.cpp  s_stacked_pair.h
Original_CCJ/: CCJ.cpp  CMakeLists.txt  Makefile.am  README.md  VM_final.cpp  V_final.cpp  V_final.h  W_final.cpp  W_final.h  h_common.cpp  h_common.h  h_struct.h  pseudo_loop.cpp  pseudo_loop.h  readme.md
Original_CCJ/simfold/: Makefile  README.html  simfold_pf  test_get_counts
Original_CCJ/simfold/params/: CG_parameters_v1.1.txt  mathews-asint1x2-dna.dh  multirnafold.conf~  turner-dangle-rna.dh  turner-sint2-rna.dg  turner-tloop-rna.dg  turner_parameters_fm363_constrdangles.txt
Original_CCJ/simfold/params/CVS/: Entries  Repository
Original_CCJ/simfold/src/common/: common.h
Original_CCJ/simfold/src/simfold/: s_min_folding.cpp  s_min_folding.h  s_multi_loop.h  s_partition_function.h  s_stacked_pair.cpp
Original_CCJ/simfold/src/simfold/CVS/: Entries  Repository
Sparse_CCJ/: CCJ.cpp  CCJ.h  CMakeLists.txt  Makefile.am  Makefile.orig  README  README.md  V_final.cpp  W_final.cpp  base.h  candidate_list.cpp  candidate_list.h  cmd_line_options.cpp  cmd_line_options.h  configure.ac  h_common.cpp  h_common.h  h_struct.h  index4D.h  index4D_test.cpp  matrices.h  matrices_test.cpp  pseudo_loop.cpp  pseudo_loop.h  simple_map.h  trace_arrow.cpp  trace_arrow.h
Sparse_CCJ/simfold/: free_energy.cpp  get_code.csh  simfold.cpp  simfold_pf.cpp
Sparse_CCJ/simfold/include/: globals.h
Sparse_CCJ/simfold/params/: mathews-sint4-dna.dh  turner-asint1x2-rna.dh  turner-sint4-rna.dh  turner-stack-rna.dg  turner-stack-rna.dh  turner-tstackh-rna.dh  turner_parameters_fm363_dangles0.txt
Sparse_CCJ/simfold/src/common/: params.cpp
Sparse_CCJ/simfold/src/simfold/: s_hairpin_loop.h  s_multi_loop.cpp  s_partition_function_ISMB.cpp  s_partition_function_complex.h  s_partition_function_savedangle.cpp  s_stacked_pair.cpp
Sparse_CCJ/simfold/src/simfold/CVS/: Root
conda_recipe/: README.md  build.sh  meta.yaml
simfold/: CMakeLists.txt  Makefile.am  README  README.md  configure.ac  free_energy.cpp  melting_temp.cpp  shape_data.cpp  shape_data.h  simfold.cpp  simfold.pc.in  simfold_pf.cpp  test_get_counts.cpp
simfold/include/: constants.h  externs.h  init.h  structs.h
simfold/params/: mathews-dangle-dna.dh  mathews-loop-dna.dh  mathews-miscloop-dna.dh  mathews-tloop-dna.dh  mathews-tstackh-dna.dh  parameters_DP09.txt  turner-asint1x2-rna.dg  turner-loop-rna.dg  turner-loop-rna.dh  turner-miscloop-rna.dg  turner-miscloop-rna.dh  turner-sint2-rna.dh  turner-triloop-rna.dh  turner-tstacki-rna.dg  turner-tstacki-rna.dh
simfold/src/common/: .#params.cpp.1.67  common.cpp  common.h  init.cpp  params.cpp  params.h
simfold/src/simfold/: s_energy_matrix.h  s_hairpin_loop.cpp  s_internal_loop.cpp  s_min_folding.cpp  s_multi_loop_sub.cpp  s_multi_loop_sub.h  s_partition_function.cpp  s_partition_function_RESTRICTED.cpp  s_partition_function_RESTRICTED.h  s_partition_function_complex.cpp  s_specific_functions.h  s_stacked_pair.cpp  s_stacked_pair.h  s_sub_folding.cpp  s_sub_folding.h
src/: VM_final.cpp  W_final.h  candidate_list.h  h_common.h  h_externs.h  index4D.h  knotty.cpp  knotty.h  matrices.h  param_path.cpp  param_path.h  pseudo_loop.cpp  simple_map.h  trace_arrow.cpp
