ACLOCAL_AMFLAGS  = -I m4

bin_PROGRAMS=CCJ

# Sources to compile CCJ from
CCJ_SOURCES = \
	h_externs.h h_globals.h h_struct.h	\
	base.h simple_map.h \
	W_final.h W_final.cpp \
	pseudo_loop.h pseudo_loop.cpp \
	V_final.h V_final.cpp \
	VM_final.h VM_final.cpp \
	h_common.h h_common.cpp \
	CCJ.h CCJ.cpp 
